# fairhire-ai

./: Dockerfile  LICENSE  README.md  docker-compose.build.yaml  pyproject.toml  requirements.txt
fair_hire_ai/: ai_utils.py  app.py
static/assets/: index.html
